<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content"
    android:layout_gravity="center" 
    android:orientation="vertical" >

    <Button
        android:id="@+id/buttonCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copydefault" />
    
    <TextView
        android:text="@string/startpointn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
      
    <EditText
        android:id="@+id/startPointN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
    <TextView
        android:text="@string/startpointe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
      
    <EditText
        android:id="@+id/startPointE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />
    
    <TextView
        android:text="@string/scale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <Spinner
    	android:id="@+id/scale_spinner"
    	android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:entries="@array/option_arrays" />
    
    <RadioGroup
        android:id="@+id/rdbGp1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rdb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gps" />
        <RadioButton
            android:id="@+id/rdb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_weight="1"
            android:text="@string/map" />

    </RadioGroup>
    <CheckBox
        android:id="@+id/chkTrack"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maketrack" />

    <Button
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done" />
    
</LinearLayout>
